[package]
edition = "2024"
name = "subconverter_for_rust"
version = "0.1.0"

[dependencies]
actix-files = "0.6.6"
actix-web = {version = "4.9.0", features = ["rustls-0_23"]}#-0_23rust还支持这样加参数?
awc = "3.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.26"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = {version = "1.0.218", features = ["derive"]}
tokio = "1.43.0"
